--- a/part3/phonebook/Backend/package.json
+++ b/part3/phonebook/Backend/package.json
@@ -13,7 +13,9 @@
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "mongoose": "^8.13.2",
     "morgan": "^1.10.0"
   }
 }
